--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,3 +1,20 @@
-<p>
-  products works!
-</p>
+<div class="row">
+  <div class="col-3">
+    <app-products-filter [category]="category"></app-products-filter>
+     </div>
+  <div class="col">
+    <div class="row">
+        <ng-container *ngFor="let p of filtredproduct; let i = index">
+          <div class="col">
+            <product-card [product]="p" [shopping-cart]="cart"></product-card>
+          </div>
+        <div *ngIf="(i + 1 ) % 2 == 0" class="w-100"></div>
+      </ng-container>
+      
+    </div>
+    
+  </div>
+
+</div>
+
+
