--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -1,3 +1,45 @@
-<p>
-  shopping-cart works!
-</p>
+<ng-container>
+  <p>
+    you have {{TotalItem}} items in your shopping cart . 
+    <button
+(click)="clearCart()"
+ class="btn btn-light btn-sm">Clear shopping cart </button> 
+  </p>
+<table class="table">
+  <thead>
+    <tr>
+      <th></th>
+      <th>Product</th>
+      <th class="text-center" style="width: 230px;">Quantity</th>
+      <th class="text-right"style="width: 200px;">price</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let p of products">
+      <td >
+        <img [src]="p.imageUrl" class="thumbnail">
+      
+      </td>
+      <td>{{p.title}}</td>
+      <td>
+        <product-quantity [product]="p"></product-quantity>
+      </td>
+      
+     
+
+      <td class="text-right">{{p.quantity*p.price | currency:'USD':true}}</td>
+    </tr>
+  </tbody>
+  <tfoot>
+    <tr>
+      <th></th>
+      <th></th>
+      <th></th>
+      <th class="text-right">{{TotalePrice | currency:'USD':true}}</th>
+    </tr>
+  </tfoot>
+</table> 
+<a routerLink="/check-out" class="btn btn-primary">Check out</a>
+
+</ng-container>
+
