--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,53 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+@import "~font-awesome/css/font-awesome.css";
 
 body { padding-top: 80px; }
+primary-color: #c1d62e;
+$primary-color-hover: #b1c522;
+
+body { 
+  padding-top: 80px; 
+}
+
+h1, h2, h3 { 
+  margin-bottom: 1.5rem;
+}
+
+.navbar { 
+  border-bottom: 3px solid #e7e7e7;
+}
+
+.navbar-light .navbar-brand {
+  color: $primary-color;
+}
+
+.navbar-light .navbar-brand:focus, .navbar-light .navbar-brand:hover {
+  color: $primary-color-hover;
+}
+
+.list-group-item.active {
+  background-color: yellowgreen;
+  border-color: yellowgreen;
+}
+
+.btn-primary {
+  background-color: yellowgreen;
+  border-color: yellowgreen;;
+}
+
+.btn-primary:hover {
+  background-color: yellowgreen;
+  border-color: yellowgreen;
+}
+
+.btn-primary.disabled, .btn-primary:disabled {
+  background-color: yellowgreen;
+  border-color: yellowgreen;
+}
+
+.form-control:focus {
+  border-color: yellowgreen;
+}
